--- a/index.html
+++ b/index.html
@@ -18,58 +18,58 @@
             </form>
           </div>
           <div class="product-block">
-            <ul class="user-info">
-              <li>
-                <a class="bookmarks" href="#">Закладки: 0</a>
+            <ul class="product-block-list">
+              <li class="product-block-item">
+                <a class="bookmarks-link" href="#">Закладки: 0</a>
               </li>
-              <li>
-                <a class="basket" href="#">Корзина: 0</a>
+              <li class="product-block-item">
+                <a class="basket-link" href="#">Корзина: 0</a>
               </li>
-              <li>
-                <a class="order" href="#">Оформить заказ</a>
+              <li class="product-block-item">
+                <a class="order-link" href="#">Оформить заказ</a>
               </li>
             </ul>
           </div>
         </div>
 
         <div class="header-mid">
-          <div class="slogan">
+          <div class="header-slogan">
             Интернет магазин<br>
             строительных материалов<br>
             и инструментов для ремонта
           </div>
-          <div class="contact">
-            <span class="phone">+7 (812) 555-05-55</span>
-            <p class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <div class="header-contacts">
+            <span class="header-phone">+7 (812) 555-05-55</span>
+            <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div class="user-block">
-            <a class="login" href="#">Войти</a>
-            <a class="sign-up" href="#">Регистрация</a>
+            <a class="login-link" href="#">Войти</a>
+            <a class="sign-up-link" href="#">Регистрация</a>
           </div>
         </div>
 
         <nav class="header-bottom">
-          <ul class="list">
-            <li class="item">
-              <a class="link" href="#">Главная</a>
+          <ul class="header-bottom-list">
+            <li class="header-bottom-item">
+              <a class="header-bottom-link" href="#">Главная</a>
             </li>
-            <li class="item">
-              <a class="link" href="#">Компания</a>
+            <li class="header-bottom-item">
+              <a class="header-bottom-link" href="#">Компания</a>
             </li>
-            <li class="item">
-              <a class="link" href="catalog.html">Каталог</a>
+            <li class="header-bottom-item">
+              <a class="header-bottom-link" href="catalog.html">Каталог</a>
             </li>
-            <li class="item">
-              <a class="link" href="#">Новости</a>
+            <li class="header-bottom-item">
+              <a class="header-bottom-link" href="#">Новости</a>
             </li>
-            <li class="item">
-              <a class="link" href="#">Спецпредложения</a>
+            <li class="header-bottom-item">
+              <a class="header-bottom-link" href="#">Спецпредложения</a>
             </li>
-            <li class="item">
-              <a class="link" href="#">Доставка</a>
+            <li class="header-bottom-item">
+              <a class="header-bottom-link" href="#">Доставка</a>
             </li>
-            <li class="item">
-              <a class="link" href="#">Контакты</a>
+            <li class="header-bottom-item">
+              <a class="header-bottom-link" href="#">Контакты</a>
             </li>
           </ul>
         </nav>
@@ -83,14 +83,17 @@
           <h2 class="catalog-item-title">Материалы</h2>
           <a class="btn catalog-btn" href="#">На любой вкус</a>
         </div>
+
         <div class="catalog-item tool">
           <h2 class="catalog-item-title">Инструмент</h2>
           <a class="btn catalog-btn" href="#">На все случаи</a>
         </div>
+
         <div class="catalog-item vehicles">
           <h2 class="catalog-item-title">Техника</h2>
           <a class="btn catalog-btn" href="#">Для стройки</a>
         </div>
+
         <div class="catalog-item slider">
           <input type="radio" name="slide" id="slide1" checked>
           <input type="radio" name="slide" id="slide2">
@@ -107,6 +110,7 @@
               <label for="slide2" class="btn right-btn"></label>
             </div>
           </div>
+
           <div class="slide slide2">
             <label for="slide1" class="arrow-left"></label>
             <label for="slide2" class="arrow-right"></label>
@@ -121,10 +125,12 @@
             </div>
           </div>
         </div>
+
         <div class="catalog-item discount">
           <h2 class="catalog-item-title">Скидкки 50%</h2>
           <a class="btn catalog-btn" href="#">На 350 товаров</a>
         </div>
+
         <div class="catalog-item delivery">
           <h2 class="catalog-item-title">Доставка</h2>
           <a class="btn catalog-btn" href="#">Бесплатно</a>
@@ -132,11 +138,11 @@
       </section>
 
       <section class="popular">
-        <section class="product">
-          <header class="product-header">
+        <div class="popular-product">
+          <div class="product-header">
             <h2 class="product-title">Популярные товары</h2>
             <a class="btn red-btn" href="#">Все популярные товары</a>
-          </header>
+          </div>
           <div class="product-items">
             <article class="product-item">
               <div class="product-image">
@@ -182,13 +188,13 @@
               </div>
             </article>
           </div>
-        </section>
+        </div>
 
-        <section class="brand">
-          <header class="product-header">
-            <h2 class="product-title">Популярные производители:</h2>
+        <div class="popular-brand">
+          <div class="brand-header">
+            <h2 class="brand-title">Популярные производители:</h2>
             <a class="btn red-btn" href="#">Все производители</a>
-          </header>
+          </div>
           <div class="brand-items">
             <article class="brand-item">
               <a class="brand-img" href="#">
@@ -238,7 +244,7 @@
               </a>
             </article>
           </div>
-        </section>
+        </div>
       </section>
 
       <section class="service">
@@ -269,13 +275,15 @@
               Ведь мы неплохо заработаем,
               поднимая его на ваш этаж!</p>
           </section>
+
           <section class="service-slide guarantee-block">
             <h2 class="service-slide-title">Гарантия</h2>
-            <p class="service-slide-text">!</p>
+            <p class="service-slide-text">#</p>
           </section>
+
           <section class="service-slide credit-block">
             <h2 class="service-slide-title">Кредит</h2>
-            <p class="service-slide-text"></p>
+            <p class="service-slide-text">#</p>
           </section>
         </div>
       </section>
@@ -283,17 +291,18 @@
       <section class="info">
         <div class="info-col-left">
           <h2 class="info-title">КОМПАНИЯ «Техномарт»</h2>
-        <p class="info-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
+          <p class="info-text">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и
           строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
-        <p class="info-text">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+          <p class="info-text">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
            Техномарт работает со многими транспортными компаниями:</p>
-        <ul class="info-list">
-          <li class="info-item">Деловые линии</li>
-          <li class="info-item">Автотрейдинг</li>
-          <li class="info-item">ЖелДорЭкспедиция</li>
-        </ul>
-        <a href="#" class="btn info-btn">Подробнее о компании</a>
+          <ul class="info-list">
+            <li class="info-item">Деловые линии</li>
+            <li class="info-item">Автотрейдинг</li>
+            <li class="info-item">ЖелДорЭкспедиция</li>
+          </ul>
+          <a class="btn info-btn" href="#">Подробнее о компании</a>
         </div>
+
         <div class="info-col-right">
           <h2 class="info-title">Контакты</h2>
           <p class="info-text">Вы можете забрать товар сами,<br>
@@ -323,35 +332,35 @@
               +7 (812) 555-05-55</p>
           </div>
           <nav class="footer-nav">
-            <ul class="footer-nav-top-list">
-              <li>
-                <a href="#">Компания</a>
+            <ul class="footer-top-list">
+              <li class="footer-top-item">
+                <a class="footer-top-link" href="#">Компания</a>
               </li>
-              <li>
-                <a href="#">Новости</a>
+              <li class="footer-top-item">
+                <a class="footer-top-link" href="#">Новости</a>
               </li>
-              <li>
-                <a href="#">Каталог</a>
+              <li class="footer-top-item">
+                <a class="footer-top-link" href="#">Каталог</a>
               </li>
-              <li>
-                <a href="#">Доставка</a>
+              <li class="footer-top-item">
+                <a class="footer-top-link" href="#">Доставка</a>
               </li>
-              <li>
-                <a href="#">Контакты</a>
+              <li class="footer-top-item">
+                <a class="footer-top-link" href="#">Контакты</a>
               </li>
             </ul>
-            <ul class="footer-nav-bottom-list">
-              <li>
-                <a href="#">Материалы</a>
+            <ul class="footer-bottom-list">
+              <li class="footer-bottom-item">
+                <a class="footer-bottom-link" href="#">Материалы</a>
               </li>
-              <li>
-                <a href="#">Техника</a>
+              <li class="footer-bottom-item">
+                <a class="footer-bottom-link" href="#">Техника</a>
               </li>
-              <li>
-                <a href="#">Инструмент</a>
+              <li class="footer-bottom-item">
+                <a class="footer-bottom-link" href="#">Инструмент</a>
               </li>
-              <li>
-                <a href="#">Спецпредложения</a>
+              <li class="footer-bottom-item">
+                <a class="footer-bottom-link" href="#">Спецпредложения</a>
               </li>
             </ul>
           </nav>
